--- a/force-app/main/default/classes/aura-enabled-eda/EDA_Query_TEST.cls
+++ b/force-app/main/default/classes/aura-enabled-eda/EDA_Query_TEST.cls
@@ -12,7 +12,7 @@ private class EDA_Query_TEST {
         Contact instructor = new Contact(LastName = 'Instructor');
         insert instructor;
         
-        hed__Term__c creditTerm = new hed__Term__c(Name = 'Credit Term', hed__Account__c = school.Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Term__c' AND DeveloperName = 'Credit' LIMIT 1]).Id);
+        hed__Term__c creditTerm = new hed__Term__c(Name = 'Credit Term', hed__Account__c = school.Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Term__c' AND DeveloperName = 'Credit' LIMIT 1]).Id, hed__Start_Date__c = Date.today().addDays(-1), hed__End_Date__c = Date.today().addDays(1));
         insert creditTerm;
 
         hed__Term__c noncreditTerm = new hed__Term__c(Name = 'Noncredit Term', hed__Account__c = school.Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Term__c' AND DeveloperName = 'Noncredit' LIMIT 1]).Id);
@@ -68,7 +68,7 @@ private class EDA_Query_TEST {
         hed__Plan_Requirement__c subjectContainer = new hed__Plan_Requirement__c(Name = 'Subjects Required', RecordTypeId = reqRecordTypeMap.get('Requirement_Container'), hed__Program_Plan__c = plan.Id, hed__Sequence__c = 2, csuoee__Requires_All_Child_Reqs__c = true, csuoee__Required_Amount__c = 2);
         insert subjectContainer;
 
-        hed__Plan_Requirement__c eitherOrContainer = new hed__Plan_Requirement__c(Name = '1 of 2 Course Req', RecordTypeId = reqRecordTypeMap.get('Requirement_Container'), hed__Plan_Requirement__c = courseContainer.Id, hed__Sequence__c = 1, csuoee__Requires_All_Child_Reqs__c = false);
+        hed__Plan_Requirement__c eitherOrContainer = new hed__Plan_Requirement__c(Name = '1 of 2 Course Req', RecordTypeId = reqRecordTypeMap.get('Requirement_Container'), hed__Plan_Requirement__c = courseContainer.Id, hed__Sequence__c = 1, csuoee__Requires_All_Child_Reqs__c = false, csuoee__Required_Amount__c = 2);
         insert eitherOrContainer;
 
         hed__Course__c c1 = new hed__Course__c(Name = 'C1', hed__Account__c = school.Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Course__c' AND DeveloperName = 'Credit' LIMIT 1]).Id, Course_Code__c = 'CRED 101');
@@ -77,10 +77,10 @@ private class EDA_Query_TEST {
         insert c2;
 
         List<hed__Plan_Requirement__c> courseReqs = new List<hed__Plan_Requirement__c> {
-            new hed__Plan_Requirement__c(Name = 'Credit Course', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = creditCourse.Id, hed__Plan_Requirement__c = courseContainer.Id, hed__Sequence__c = 2),
-            new hed__Plan_Requirement__c(Name = 'CC1', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = c1.Id, hed__Plan_Requirement__c = eitherOrContainer.Id, hed__Sequence__c = 1),
-            new hed__Plan_Requirement__c(Name = 'CC2', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = c2.Id, hed__Plan_Requirement__c = eitherOrContainer.Id, hed__Sequence__c = 2),
-            new hed__Plan_Requirement__c(Name = 'CRED2', RecordTypeId = reqRecordTypeMap.get('Subject_Requirement'), hed__Plan_Requirement__c = subjectContainer.Id)
+            new hed__Plan_Requirement__c(Name = 'Credit Course', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = creditCourse.Id, hed__Plan_Requirement__c = courseContainer.Id, hed__Sequence__c = 2, hed__Credits__c = 2.0),
+            new hed__Plan_Requirement__c(Name = 'CC1', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = c1.Id, hed__Plan_Requirement__c = eitherOrContainer.Id, hed__Sequence__c = 1, hed__Credits__c = 2.0),
+            new hed__Plan_Requirement__c(Name = 'CC2', RecordTypeId = reqRecordTypeMap.get('Course_Requirement'), hed__Course__c = c2.Id, hed__Plan_Requirement__c = eitherOrContainer.Id, hed__Sequence__c = 2, hed__Credits__c = 2.0),
+            new hed__Plan_Requirement__c(Name = 'CRED2', RecordTypeId = reqRecordTypeMap.get('Subject_Requirement'), hed__Plan_Requirement__c = subjectContainer.Id, hed__Credits__c = 2.0)
         };
         insert courseReqs;
     }
@@ -139,6 +139,8 @@ private class EDA_Query_TEST {
     @IsTest
     private static void getPlanCompletion() {
         Test.startTest();
+        List<String> errors = QueryProgramCompletion.isValidCreditPlan([SELECT Id FROM hed__Program_Plan__c LIMIT 1].Id);
+        System.assert(!errors.isEmpty(), errors.toString());
         hed__Course__c creditCourse2 = new hed__Course__c(Name = 'Credit Course', hed__Account__c = [SELECT Id FROM Account WHERE Name = 'School' LIMIT 1].Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Course__c' AND DeveloperName = 'Credit' LIMIT 1]).Id, Course_Code__c = 'CRED2 100');
         insert creditCourse2;
         hed__Course_Offering__c creditOffering2 = new hed__Course_Offering__c(hed__Term__c = [SELECT Id FROM hed__Term__c WHERE Name = 'Credit Term' LIMIT 1].Id, hed__Course__c = creditCourse2.Id, Name = 'CRED2 100 10');
@@ -149,6 +151,22 @@ private class EDA_Query_TEST {
 
         PlanCompletionComparison comparison = QueryProgramCompletion.getPlanCompletion(contactId, [SELECT Id FROM hed__Program_Plan__c LIMIT 1].Id);
         System.assertEquals(4, comparison.Result.EarnedCredits, 'Expected Credits do not match: 4, '+String.valueOf(comparison.Result.EarnedCredits));
+
+        hed__Course__c creditCourse = new hed__Course__c(Name = 'Credit Course 3', hed__Account__c = [SELECT Id FROM Account WHERE Name = 'School' LIMIT 1].Id, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Course__c' AND DeveloperName = 'Credit' LIMIT 1]).Id, Course_Code__c = 'CRED 200');
+        insert creditCourse;
+        hed__Course_Offering__c creditOffering = new hed__Course_Offering__c(hed__Term__c = [SELECT Id FROM hed__Term__c WHERE Name = 'Credit Term' LIMIT 1].Id, hed__Course__c = creditCourse.Id, Name = 'CRED 200 10');
+        insert creditOffering;
+        hed__Plan_Requirement__c newReq = new hed__Plan_Requirement__c(Name = 'CC3', hed__Credits__c = 2.0, RecordTypeId = [SELECT Id FROM RecordType WHERE DeveloperName = 'Course_Requirement' LIMIT 1].Id, hed__Course__c = creditCourse.Id, hed__Plan_Requirement__c = [SELECT Id FROM hed__Plan_Requirement__c WHERE Name = 'Courses Required' LIMIT 1].Id, hed__Sequence__c = 3);
+        insert newReq;
+
+        hed__Course_Enrollment__c enrollment = new hed__Course_Enrollment__c(hed__Course_Offering__c = creditOffering.Id, hed__Contact__c = contactId, RecordTypeId = ([SELECT Id FROM RecordType WHERE SobjectType = 'hed__Course_Enrollment__c' AND DeveloperName = 'Student' LIMIT 1]).Id);
+        insert enrollment;
+
+        comparison = QueryProgramCompletion.getPlanCompletion(contactId, [SELECT Id FROM hed__Program_Plan__c LIMIT 1].Id);
+        System.assertEquals(4, comparison.Result.EarnedCredits, 'Expected Credits do not match: 4, '+String.valueOf(comparison.Result.EarnedCredits));
+
+        errors = QueryProgramCompletion.isValidCreditPlan([SELECT Id FROM hed__Program_Plan__c LIMIT 1].Id);
+        System.assert(!errors.isEmpty(), errors.toString());
 
         Test.stopTest();
     }
