Update subject req comparisons to use level divisions

--- a/force-app/main/default/classes/util/PlanCompletionComparison.cls
+++ b/force-app/main/default/classes/util/PlanCompletionComparison.cls
@@ -104,7 +104,6 @@ global with sharing class PlanCompletionComparison {
 
         @AuraEnabled
         global List<RequirementContainer> ChildContainers = new List<RequirementContainer>();
-
         @AuraEnabled
         global List<CourseRequirement> CourseRequirements = new List<CourseRequirement>();
         @AuraEnabled
@@ -137,7 +136,13 @@ global with sharing class PlanCompletionComparison {
         global void evalueSubjectRequirements(Set<Id> enrollmentUsage, List<hed__Course_Enrollment__c> enrollments) {
             for(SubjectRequirement req : SubjectRequirements) {
                 for(hed__Course_Enrollment__c enrollment : enrollments) {
-                    if(!enrollmentUsage.contains(enrollment.Id) && enrollment.hed__Course_Offering__r.hed__Course__r.csuoee__Course_Code__c.startsWithIgnoreCase(req.Subject+' ')) {
+                    List<String> courseCodeSplit = enrollment.hed__Course_Offering__r.hed__Course__r.csuoee__Course_Code__c.split(' ');
+
+                    if(!enrollmentUsage.contains(enrollment.Id) 
+                        && courseCodeSplit.get(0).equals(req.Subject) // Use equals so 'STAT' doesn't match 'ST'
+                        && courseCodeSplit.get(1).compareTo(String.valueOf(req.LevelRequirement) >= 0) // Use String compare because 481A1 >= 400 is true
+                        && courseCodeSplit.get(1).compareTo(String.valueOf(req.MaxLevelRequirement) <= 0) // Use String compare because 481A1 <= 999 is also true
+                    ) {
                         req.EarnedCredits = Integer.valueOf(enrollment.hed__Credits_Earned__c);
                         enrollmentUsage.add(enrollment.Id);
                         break;
@@ -212,8 +217,8 @@ global with sharing class PlanCompletionComparison {
         global SubjectRequirement(hed__Plan_Requirement__c req) {
             this.Subject = req.csuoee__Subject__c;
             this.TotalCredits = Integer.valueOf(req.hed__Credits__c);
-            this.LevelRequirement = Integer.valueOf(req.csuoee__Level_Requirement__c);
-            this.MaxLevelRequirement = Integer.valueOf(req.csuoee__Level_Requirement_Max__c);
+            this.LevelRequirement = (req.csuoee__Level_Requirement__c=='')?0:Integer.valueOf(req.csuoee__Level_Requirement__c);
+            this.MaxLevelRequirement = (req.csuoee__Level_Requirement__c=='')?999:Integer.valueOf(req.csuoee__Level_Requirement_Max__c);
         }
 
     }
